--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   .frame .overlap {
     position: relative;
     height: 768px;
-    background-image: url(image-1.png);
+    background-image: url(image\ 1.png);
     background-size: cover;
     background-position: 50% 50%;
   }
